--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "dependencies": {
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "style-inject": "^0.3.0",
+    "styled-components": "^5.3.1",
+    "contentful": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "17.0.30",
+    "@types/styled-components": "^5.1.15",
+    "babel-plugin-styled-components": "^2.0.1",
     "eslint": "8.0.1",
     "eslint-config-next": "11.1.2",
     "typescript": "4.4.4"
