--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "contentful": "^9.0.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "style-inject": "^0.3.0",
-    "styled-components": "^5.3.1",
-    "contentful": "^9.0.1"
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@types/react": "17.0.30",
@@ -22,6 +22,7 @@
     "babel-plugin-styled-components": "^2.0.1",
     "eslint": "8.0.1",
     "eslint-config-next": "11.1.2",
+    "prettier": "2.5.1",
     "typescript": "4.4.4"
   }
 }
