--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,13 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+
+    "baseUrl": "./",
+    "paths": {
+      "@web/*": ["src/web/*"],
+      "@core/*": ["src/core/*"],
+    }
   },
   "include": [
     "next-env.d.ts",
