--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "contentful": "^9.0.1",
+    "misevi": "^0.4.1",
     "mongodb": "^4.2.2",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
     "style-inject": "^0.3.0",
     "styled-components": "^5.3.1"
   },
