Added test setup and an ongoing refactor for charactersheet api calls.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,12 +17,22 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-
     "baseUrl": "./",
     "paths": {
-      "@web/*": ["src/web/*"],
-      "@core/*": ["src/core/*"],
-    }
+      "@web/*": [
+        "src/web/*"
+      ],
+      "@core/*": [
+        "src/core/*"
+      ],
+      "@pages/*": [
+        "pages/*"
+      ],
+      "@api/*": [
+        "pages/api/*"
+      ]
+    },
+    "incremental": true
   },
   "include": [
     "next-env.d.ts",
