--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "contentful": "^9.0.1",
     "misevi": "^0.4.3",
     "mongodb": "^4.2.2",
-    "next": "11.1.2",
+    "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "style-inject": "^0.3.0",
@@ -20,12 +20,19 @@
     "swr": "^1.1.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.4.0",
     "@types/react": "17.0.30",
     "@types/styled-components": "^5.1.15",
     "babel-plugin-styled-components": "^2.0.1",
     "eslint": "8.0.1",
     "eslint-config-next": "11.1.2",
+    "ts-mockito": "2.6.1",
+    "jest": "^27.4.7",
+    "node-mocks-http": "^1.11.0",
     "prettier": "2.5.1",
+    "react-testing-library": "^8.0.1",
     "typescript": "4.4.4"
   }
 }
