Misc bug fixing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,9 @@
       ],
       "@api/*": [
         "pages/api/*"
+      ],
+      "@tests/*": [
+        "tests/*"
       ]
     },
     "incremental": true
