--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,7 @@
         "pages/api/*"
       ],
       "@tests/*": [
-        "tests/*"
+        "src/tests/*"
       ]
     },
     "incremental": true
