--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "17.0.2",
     "style-inject": "^0.3.0",
     "styled-components": "^5.3.1",
-    "swr": "^1.1.2"
+    "swr": "^1.1.2",
+    "@auth0/nextjs-auth0": "^1.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
