--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "prettier": "2.5.1",
     "react-testing-library": "^8.0.1",
     "typescript": "4.5.5"
+  },
+  "browser": {
+    "fs": false
   }
 }
