--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "contentful": "^9.1.6",
-    "misevi": "^0.4.11",
-    "mongodb": "^4.3.1",
-    "next": "12.0.9",
+    "contentful": "9.1.10",
+    "misevi": "0.4.13",
+    "mongodb": "4.3.1",
+    "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "style-inject": "^0.3.0",
-    "styled-components": "^5.3.3",
-    "swr": "^1.2.0",
-    "@auth0/nextjs-auth0": "^1.7.0"
+    "style-inject": "0.3.0",
+    "styled-components": "5.3.3",
+    "swr": "1.2.0",
+    "@auth0/nextjs-auth0": "1.7.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@types/jest": "^27.4.0",
+    "@testing-library/jest-dom": "5.16.1",
+    "@testing-library/react": "12.1.2",
+    "@types/jest": "27.4.0",
     "@types/react": "17.0.38",
-    "@types/styled-components": "^5.1.21",
+    "@types/styled-components": "5.1.21",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.9",
-    "jest": "^27.4.7",
+    "jest": "27.4.7",
     "prettier": "2.5.1",
     "react-testing-library": "^8.0.1",
     "typescript": "4.5.5"
