--- a/package.json
+++ b/package.json
@@ -9,29 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "contentful": "9.1.12",
+    "@auth0/nextjs-auth0": "1.9.0",
+    "contentful": "9.1.29",
     "misevi": "0.4.15",
-    "mongodb": "4.4.0",
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "mongodb": "4.6.0",
+    "next": "12.1.6",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "style-inject": "0.3.0",
-    "styled-components": "5.3.3",
-    "swr": "1.2.0",
-    "@auth0/nextjs-auth0": "1.7.0"
+    "styled-components": "5.3.5",
+    "swr": "1.3.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "5.16.1",
-    "@testing-library/react": "12.1.2",
-    "@types/jest": "27.4.0",
-    "@types/react": "17.0.38",
-    "@types/styled-components": "5.1.21",
-    "eslint": "8.8.0",
-    "eslint-config-next": "12.0.9",
-    "jest": "27.4.7",
-    "prettier": "2.5.1",
-    "react-testing-library": "^8.0.1",
-    "typescript": "4.5.5"
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.3.0",
+    "@types/jest": "27.5.1",
+    "@types/react": "18.0.9",
+    "@types/styled-components": "5.1.25",
+    "eslint": "8.16.0",
+    "eslint-config-next": "12.1.6",
+    "jest": "27.5.1",
+    "prettier": "2.6.2",
+    "react-testing-library": "8.0.1",
+    "typescript": "4.7.2"
   },
   "browser": {
     "fs": false
