--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress": "cypress open",
+    "cypress:headless": "cypress run --browser chrome --headless",
+    "test:e2e": "start-server-and-test 'yarn start' 3000 'yarn cypress'",
+    "test:e2e:ci": "start-server-and-test 'yarn start' 3000 'yarn cypress:headless'"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "1.9.0",
@@ -21,11 +25,14 @@
     "swr": "1.3.0"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^8.0.3",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.3.0",
     "@types/jest": "27.5.1",
     "@types/react": "18.0.9",
     "@types/styled-components": "5.1.25",
+    "cypress": "10.4.0",
+    "cypress-nextjs-auth0": "2.1.0",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "jest": "27.5.1",
