--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "swr": "1.3.0"
   },
   "devDependencies": {
-    "@testing-library/cypress": "^8.0.3",
+    "@testing-library/cypress": "8.0.3",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.3.0",
     "@types/jest": "27.5.1",
